bug: black text on dark mode

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -223,7 +223,6 @@ section {
 .copyright {
   font-size: 14px;
   align-self: flex-end;
-  color: black !important;
 }
 
 .copyright a{
